
This document summarizes the most important changes in the current Zeek
release. For an exhaustive list of changes, see the ``CHANGES`` file
(note that submodules, such as Broker, come with their own ``CHANGES``.)

Zeek 8.2.0
==========

We'd like to thank ... for their contributions to this release.

Breaking Changes
----------------

New Functionality
-----------------

- Well-known ports of built-in analyzers can now be configured via redef. For example:

	redef HTTP::ports += { 8181/tcp };

  For protocol analyzers, the variable name is generally ``Analyzer_Module::ports``,
  but in certain cases (SSL, QUIC, RDP, ...) the variable name includes the protocol
  name to distinguish different internal analyzers. ``SSL::ssl_ports`` and ``SSL::dtls_ports``
  as a concrete example. Check the analyzer module's ``export`` section or online documentation.
  For packet analyzers, the analyzer name is included in the variable name for historical
  reasons. Example:

	redef PacketAnalyzer::VXLAN::vxlan_ports += { 4711/udp };

- The number of messages and bytes processed by the central ZeroMQ XPUB/XSUB
  cluster component is now exposed as metrics of the form:

	zeek_cluster_zeromq_proxy_{frontend,backend}_{bytes,messages}_{sent,received}

  by the process running this component in a cluster. Note that Zeek uses multipart
  messages for events: Publishing a single event currently counts as four messages
  as we're simply exposing ZeroMQ's low-level ``zmq::proxy_steerable()`` statistics.

Changed Functionality
---------------------

- The ``to_subnet()`` built-in function's parsing of IPv6 subnets was changed
  to align with how IPv6 subnet literals are parsed in Zeek scripts. Previously,
  any subnet containing the ``::ffff:0:0/96`` IPv4-mapped prefix would produce
  an IPv4 subnet, even if provided prefix was shorter than the required 96 bits.

  Internally, the behavior of the ``IPPrefix::ConvertString()`` API was changed
  to accommodate for this.
